appdaemon/appdaemon.daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: appdaemon
spec:
  template:
    metadata:
      labels:
        app: appdaemon
    spec:
      hostNetwork: true
      containers:
      - name: appdaemon
        image: acockburn/appdaemon
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
          name: dashboard
        volumeMounts:
        - name: appdaemon-config
          mountPath: /conf
        - name: localtime
          mountPath: /etc/localtime
      volumes:
      - name: appdaemon-config
        nfs:
          server: 192.168.1.128
          path: /volume1/configs/homeassistant/appdaemon
      - name: localtime
        hostPath:
          path: /etc/localtime
