appdaemon/appdaemon.svc.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdaemon-nodeport
  labels:
    app: appdaemon
spec:
  selector:
    app: appdaemon
  type: NodePort
  ports:
    - name: appdaemon
      port: 5050
      targetPort: 5050
  externalIPs:
    - 192.168.1.150
