appdaemon/appdaemon.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appdaemon
  labels:
    app: appdaemon
spec:
  selector:
    app: appdaemon
  ports:
    - name: appdaemon
      port: 80
      targetPort: 5050
