appdaemon/appdaemon.ingress.traefik.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: appdaemon
  labels:
    app: appdaemon
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: appdaemon.home
      http:
        paths:
          - backend:
              serviceName: appdaemon
              servicePort: 80
